@@ -8,6 +8,8 @@
         - Datapacket.address implemented, datapacket has now also its redvypr address
         - RedvyprAddress is hashable, i.e. can be used as dictionary entries
         - manual_input device added
+        - Datapacket accepts datapacket is input
+        - generic_sensor update
 - 0.9.0:
         - autostart bug
         - autocalibration in calibration device
